<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:text="@string/welcome_to_habits_data_gathering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeMessage"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/please_connect_to_a_device"
        android:id="@+id/welcomePrompt"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_study"
        android:id="@+id/startStudyButton"
        android:onClick="startStudyClicked"
        android:enabled="true"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_study"
        android:id="@+id/manageStudyButton"
        android:layout_gravity="center_horizontal"
        android:onClick="manageStudyClicked"
        android:enabled="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_study"
        android:id="@+id/endStudyButton"
        android:layout_gravity="center_horizontal"
        android:onClick="endStudyClicked"
        android:enabled="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_database"
        android:id="@+id/displayDbButton"
        android:onClick="onReadDatabase"
        android:enabled="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_database"
        android:id="@+id/deleteDbButton"
        android:onClick="onDeleteDatabase"/>


</LinearLayout>
